--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
     margin: 0;
 }
 
+#banner img {
+    height: 38px;
+    width: 250px;
+    margin-left: 20px;
+}
 
 header {
     display: flex;
@@ -24,14 +29,14 @@ h1 {
     margin-left: 100px;
 }
 
-.photographer_section {
+#photographers {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
 }
 
-.photographer_section article {
+#photographers article {
     justify-self: center;
     display: flex;
     justify-content: center;
@@ -39,12 +44,19 @@ h1 {
     flex-direction: column;
 }
 
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+#photographers article a {
+    text-decoration: none;
+    text-align: center;
 }
 
-.photographer_section article img {
-    height: 200px;
-    width: 200px;
+#photographers article h2 {
+    color: #D3573C;
+    font-size: 36px;
+    text-align: center;
+}
+
+#photographers article img {
+    height: 250px;
+    width: 250px;
+    border-radius: 50%; /* AFIN D'ARRONDIR LES IMAGES DE LA PAGES D'ACCUEIL */
 }
