--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
 #banner img {
     height: 38px;
     width: 250px;
-    margin-left: 20px;
+    margin-left: 40px;
+    margin-top: 20px;
 }
 
 header {
@@ -16,7 +17,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 90px;
+    padding-top: 20px;
 }
 
 h1 {
